--- a/research.html
+++ b/research.html
@@ -30,14 +30,14 @@
 <h2>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
-The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, forthcoming
+The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, Volume 65, May 2023 
 <p id="one">
 <a href="https://doi.org/10.1017/lap.2022.47" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <p/>
 
   
 <p>
-When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming
+When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming 
 <p id="one">
 <a href="https://www.tandfonline.com/doi/abs/10.1080/17457289.2022.2081696?journalCode=fbep20" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <a href="when_the_partisan.pdf" target="_blank"><button class="button button3">local PDF</button></a>
