--- a/research.html
+++ b/research.html
@@ -30,6 +30,13 @@
 <h2>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
+Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina, with E. Gonzalez-Ocantos and G. Tuñón, <i>British Journal of Political Science</i>, forthcoming <p id="one">
+<p id="one">
+<a href="witch_hunts.pdf" target="_blank"><button class="button button3">local PDF</button></a>
+<p/>
+
+  
+<p>
 The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, Volume 65, May 2023 
 <p id="one">
 <a href="https://doi.org/10.1017/lap.2022.47" target="_blank" class="button button1"> <button class="button button1">link</button></a>
