--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Thank you for visiting my website. I am an Associate Professor of Social Science
 I study political institutions and the political economy of development. A list of my writings can be found <a href=research.html title="research">here</a>.
 <p/>
 <p>
-I received my PhD in Political Science from Yale University. You can find my CV <a href="Feierherd CV_short.pdf" title="CV">here</a>.
+I received my PhD from Yale University. You can find my CV <a href="Feierherd CV_short.pdf" title="CV">here</a>.
 <p/>
 <hr> 
 
@@ -50,7 +50,7 @@ Gracias por visitar mi sitio web. Soy profesor asociado de Ciencias Sociales y E
 Mis investigaciones se enfocan en las instituciones políticas y la economía política del desarrollo. <a href=research.html title="research">Acá</a> podés encontrar una lista de mis artículos. 
 <p/>
 <p>
-Recibí mi doctorado en ciencia política por la Universidad de Yale. Podés consultar mi CV <a href="Feierherd CV_short.pdf" title="CV">acá</a>. 
+Recibí mi doctorado por la Universidad de Yale. Podés consultar mi CV <a href="Feierherd CV_short.pdf" title="CV">acá</a>. 
 <p/>
 
 
