--- a/research.html
+++ b/research.html
@@ -33,6 +33,7 @@
 Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina, with E. Gonzalez-Ocantos and G. Tuñón, <i>British Journal of Political Science</i>, forthcoming <p id="one">
 <p id="one">
 <a href="witch_hunts.pdf" target="_blank"><button class="button button3">local PDF</button></a>
+<a href="https://doi.org/10.7910/DVN/KEQ3G7" target="_blank"><button class="button button2">replication files</button></a>  
 <p/>
 
   
