--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@ The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long
 
   
 <p>
-When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming 
+When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, 33(4), 2023, 684-704.  
 <p id="one">
 <a href="https://www.tandfonline.com/doi/abs/10.1080/17457289.2022.2081696?journalCode=fbep20" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <a href="when_the_partisan.pdf" target="_blank"><button class="button button3">local PDF</button></a>
