--- a/research.html
+++ b/research.html
@@ -30,7 +30,12 @@
 <h2>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
-Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina, with E. Gonzalez-Ocantos and G. Tuñón, <i>British Journal of Political Science</i>, 2023 <p id="one">
+Peasant Resistance in Times of Economic Affluence: Lessons from Paraguay, with R. Duarte, J. Mangonet, and M. V. Murillo, forthcoming at <i>Comparative Political Studies</i>
+<p id="one">
+<p/>
+  
+<p>
+Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina, with E. Gonzalez-Ocantos and G. Tuñón, <i>British Journal of Political Science</i>, 2023
 <p id="one">
 <a href="witch_hunts.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 <a href="https://doi.org/10.7910/DVN/KEQ3G7" target="_blank"><button class="button button2">replication files</button></a>  
@@ -45,7 +50,7 @@ The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long
 
   
 <p>
-When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, 33(4), 2023, 684-704.  
+When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, 33(4), 2023, 684-704  
 <p id="one">
 <a href="https://www.tandfonline.com/doi/abs/10.1080/17457289.2022.2081696?journalCode=fbep20" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <a href="when_the_partisan.pdf" target="_blank"><button class="button button3">local PDF</button></a>
