--- a/research.html
+++ b/research.html
@@ -30,8 +30,9 @@
 <h2>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
-Peasant Resistance in Times of Economic Affluence: Lessons from Paraguay, with R. Duarte, J. Mangonet, and M. V. Murillo, forthcoming at <i>Comparative Political Studies</i>
+Peasant Resistance in Times of Economic Affluence: Lessons from Paraguay, with R. Duarte, J. Mangonet, and M. V. Murillo, <i>Comparative Political Studies</i>, 2024
 <p id="one">
+<a href="https://doi.org/10.1177/0010414024123747" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <p/>
   
 <p>
