--- a/index.html
+++ b/index.html
@@ -1,72 +1,161 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75172705-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-75172705-1');
-</script>
-
-
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="German Feierherd">
   <title>German Feierherd</title>
-  <style type="text/css">code{white-space: pre;}</style>
-  <link rel="stylesheet" href="style.css">
-  <meta name="description" content="German Feierherd's webpage">
-  <meta name="keywords" content="German Feierherd, Political Science, UdeSA">
- </head>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Source Sans Pro', sans-serif;
+      font-size: 16px;
+      line-height: 1.6;
+      color: #333333;
+      background-color: #ffffff;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 800px;
+      width: 100%;
+      padding: 20px;
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 20px;
+      background-color: #f9f9f9;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .profile-picture {
+      border-radius: 8px;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .profile-picture img {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    .profile-picture .links {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      width: 100%;
+    }
+
+    .profile-picture .links a {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      font-weight: bold;
+      color: #007acc;
+      text-decoration: none;
+      padding: 10px;
+      background-color: #f1f1f1;
+      border-radius: 4px;
+      width: 100%;
+    }
+
+    .profile-picture .links a img {
+      margin-right: 10px;
+      width: 20px;
+      height: 20px;
+    }
+
+    .profile-picture .links a svg {
+      margin-right: 10px;
+      width: 20px;
+      height: 20px;
+    }
+
+    .profile-picture .links a:hover {
+      background-color: #e0e0e0;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
+
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 28px;
+      margin-bottom: 10px;
+      color: #222222;
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
+  </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-355613844"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-355613844');
+  </script>
+  <!-- End Google Analytics -->
+</head>
 
 <body>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-
-<h1 id="german-feierherd" style="text-align:center"><b> Germ&#225n Feierherd </b> </h6>
-<p id="two" style="text-align:center"> <a>&#10064; </a> <a href="Feierherd CV_short.pdf"> CV</a> | <a> &#9993; </a> <a href=
-  "mailto: gfeierherd@udesa.edu.ar"
-  >Mail</a> |  <a> &#9998;  </a> <a href="research.html">Research & Writing </a><p/>
-
-<div class="main">
-
-Thank you for visiting my website. I am an Associate Professor of Social Sciences and Economics at <a href=https://www.udesa.edu.ar title="UdeSA Uiversity">Universidad de San Andrés</a> in Buenos Aires, Argentina. I am also Director of the <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Master in Public Policy and Administration.</a></br> 
-
-<p>
-I study political institutions and the political economy of development. A list of my writings can be found <a href=research.html title="research">here</a>.
-<p/>
-<p>
-I received my PhD from Yale University. You can find my CV <a href="Feierherd CV_short.pdf" title="CV">here</a>.
-<p/>
-<hr> 
-
-<br>
-
-Gracias por visitar mi sitio web. Soy profesor asociado de Ciencias Sociales y Economía en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina. También soy Director de la <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Maestría en Administración y Políticas Públicas.</a> </br>
-
-<p>
-Mis investigaciones se enfocan en las instituciones políticas y la economía política del desarrollo. <a href=research.html title="research">Acá</a> podés encontrar una lista de mis artículos. 
-<p/>
-<p>
-Recibí mi doctorado por la Universidad de Yale. Podés consultar mi CV <a href="Feierherd CV_short.pdf" title="CV">acá</a>. 
-<p/>
-
-
-</div>  
-
+  <div class="container">
+    <div class="profile-picture">
+      <img src="German (23 of 30).jpg" alt="German Feierherd Profile Picture">
+      <div class="links">
+        <a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="20" height="20">
+            <path d="M12 1.5A10.5 10.5 0 1 1 1.5 12 10.511 10.511 0 0 1 12 1.5m0-1.5a12 12 0 1 0 12 12A12.013 12.013 0 0 0 12 0z"/>
+            <circle cx="12" cy="12" r="4.5"/>
+          </svg>
+          Google Scholar
+        </a>
+        <a href="https://www.linkedin.com/in/german-feierherd-5a177335/?locale=en_US" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn Icon">
+          LinkedIn
+        </a>
+         <a href="#" onclick="location.href='mailto:' + 'gfeierherd' + '@' + 'udesa.edu.ar'; return false;">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="bi bi-envelope-fill" width="20" height="20">
+            <path d="M.05 3.555A2 2 0 0 1 2.07 2h11.86a2 2 0 0 1 2.02 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.843L0 4.697zM6.761 8.83 0 12.252A2 2 0 0 0 2.07 14h11.86a2 2 0 0 0 2.07-1.748l-6.761-3.422L8 9.586l-1.239-.757zM10.197 8.958 16 11.801V4.697l-5.803 4.261z" />
+          </svg>
+          Email
+        </a>
+     </div>
+    </div>
+    <div class="content">
+      <h1>German Feierherd</h1>
+      <p>I am an Associate Professor of Social Sciences and Economics at <a href="https://www.udesa.edu.ar" target="_blank">Universidad de San Andrés</a> in Buenos Aires, Argentina. I also direct the <a href="https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas" target="_blank">Master's Program in Public Policy and Administration</a>.</p>
+      <p>My research examines the role of political institutions in shaping inequality, economic informality, and corruption. I specialize in leveraging quantitative methods, with an emphasis on causal inference, to address these issues.</p>
+      <p>I hold a PhD from Yale University and have held academic appointments as a postdoctoral associate at Duke University and visiting scholar positions at NYU-Buenos Aires, Princeton University, and Tulane University.</p>
+      <p>My full CV is available <a href="Feierherd_CV.pdf" target="_blank">here</a>.</p>
+    </div>
+  </div>
 </body>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-75172705-1', 'auto');
-  ga('send', 'pageview');
-</script>
-
-
 </html>
+
+
+
+
+
+
+
+
