--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <p>I am an Associate Professor of Social Sciences and Economics at <a href="https://www.udesa.edu.ar" target="_blank">Universidad de San Andrés</a> in Buenos Aires, Argentina. I also direct the <a href="https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas" target="_blank">Master's Program in Public Policy and Administration</a>.</p>
       <p>My research examines the role of political institutions in shaping inequality, economic informality, and corruption. I specialize in leveraging quantitative methods, with an emphasis on causal inference, to address these issues.</p>
       <p>I hold a PhD from Yale University and have held academic appointments as a postdoctoral associate at Duke University and visiting scholar positions at NYU-Buenos Aires, Princeton University, and Tulane University.</p>
-      <p>My full CV is available <a href="Feierherd_CV_short.pdf" target="_blank">here</a>.</p>
+      <p>My full CV is available <a href="Feierherd CV_short.pdf" target="_blank">here</a>.</p>
     </div>
   </div>
 </body>
