--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     }
     gtag('js', new Date());
 
-    gtag('config', 'G-355613844');
+    gtag('config', 'G-Q1S5NTKFPV');
   </script>
   <!-- End Google Analytics -->
 </head>
